tests/transpiler/x/cpp/pure_global_fold.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-20 23:06:01 GMT+7
#include <iostream>
#include <string>

int inc(int x) {
    return (x + k);
}

auto k = 2;

int main() {
    std::cout << std::boolalpha << inc(3) << std::endl;
    return 0;
}
